# neural-odes

./: .gitignore  README.md  dynamics.py  evaluate.py  generate_plots.py  models.py  pyproject.toml  train.py  wandb_get.py
models_damped_oscillator/: gru.pt  lstm.pt  neural_ode.pt  rnn.pt
models_double_pendulum/: gru.pt  lstm.pt  neural_ode.pt  norm_stats.pt  rnn.pt
models_double_pendulum/checkpoints/: gru_iter1000.pt  gru_iter10000.pt  gru_iter100000.pt  gru_iter11000.pt  gru_iter12000.pt  gru_iter13000.pt  gru_iter14000.pt  gru_iter15000.pt  gru_iter16000.pt  gru_iter17000.pt  gru_iter18000.pt  gru_iter19000.pt  gru_iter2000.pt  gru_iter20000.pt  gru_iter21000.pt  gru_iter22000.pt  gru_iter23000.pt  gru_iter24000.pt  gru_iter25000.pt  gru_iter26000.pt  gru_iter27000.pt  gru_iter28000.pt  gru_iter29000.pt  gru_iter3000.pt  gru_iter30000.pt  gru_iter31000.pt  gru_iter32000.pt  gru_iter33000.pt  gru_iter34000.pt  gru_iter35000.pt  gru_iter36000.pt  gru_iter37000.pt  gru_iter38000.pt  gru_iter39000.pt  gru_iter4000.pt  gru_iter40000.pt  gru_iter41000.pt  gru_iter42000.pt  gru_iter43000.pt  gru_iter44000.pt  (+560 more)
models_dp/: gru.pt  lstm.pt  neural_ode.pt  rnn.pt
models_lorenz/: gru.pt  lstm.pt  neural_ode.pt  rnn.pt
models_single_pendulum/: gru.pt  lstm.pt  neural_ode.pt  rnn.pt
